// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a default button 1`] = `
<div>
  <button
    class="sc-bczRLJ fiMtFI"
  />
</div>
`;

exports[`renders a primary button 1`] = `
<div>
  <button
    class="sc-bczRLJ sc-gsnTZi fiMtFI fmVnUV"
  >
    Label
  </button>
</div>
`;
